:ambulance: [HOTFIX]: 게시물 상세조회시 파일명, 파일url 같이 조회되게 변경